Design table sheet

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 	</head>
 	<body id="<%= params[:action] %>">
 		<header>
-			<a href="/">Coockening</a>		
+			<a href="/">Cookening</a>		
 		</header>
 		<nav>
 			<ul>
