--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,6 @@
  *= require bootstrap
  *= require bootstrap-override
  *= require main
- *= require formtastic
+ *= require formtastic-bootstrap
 */
 
