--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -26,4 +26,13 @@ border-radius: 3px;
 height: 130px;
 line-height: 130px;
 margin-bottom : 10px;
+font-size : 17px;
+}
+
+.step-true {
+    color : green;
+}
+
+.step-false {
+    color : red;
 }
