--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
 <div class="hero-unit">
   <h1>Welcome to the TAH project</h1>
   <br/>
-  <p><a class="btn btn-primary btn-large">Learn more »</a></p>
+  <p><a class="btn btn-primary btn-large" href="<%= new_user_registration_path %>">Register »</a></p>
 </div>
 
 <!-- Example row of columns -->
