--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">TAH Project</a>
+          <a class="brand" href="/">TAH Project</a>
           <div class="nav-collapse">
             <ul class="nav">
 	      <%= render_navigation :level => 1 %> 
