--- a/app/views/table_dashboard/index.html.erb
+++ b/app/views/table_dashboard/index.html.erb
@@ -28,7 +28,7 @@
 	</ul>
       </div>
 
-      <a class="btn" href="<%= table_dashboard_create_new_path %>">
+      <a class="btn" href="<%= table_dashboard_create_new_path %>" data-method="post">
 	<i class="icon-plus"></i> 
 	<%= t 'table_dashboard.index.create_new_table' %>
       </a>
