--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,11 @@
-<h2>Sign up</h2>
+<h2><%= t 'misc.title.sign_up' %></h2>
 
 <%= semantic_form_for resource_name, :url => registration_path(resource_name) do |f| %>
   
   <%= devise_error_messages! %>
   
-  <%= f.inputs :email, :password, :password_confirmation %>
+  <%= f.inputs :f_name, :l_name, :email, :password, :password_confirmation %>
+  <%= f.input :status, :as => :select, :collection => User::Status.ordered_values, :default => 0 %>
 
   <%= f.buttons do %>
     <%= f.commit_button %>
