--- a/app/views/menu_dashboard/edit.html.erb
+++ b/app/views/menu_dashboard/edit.html.erb
@@ -34,33 +34,8 @@
     </div>
     
     <div class="span6">
-      <h2>Dishes list</h2>
-
-	<div class="well">
-	  <!-- Warning dish-list must stay arround the list of menus -->
-	  <ul class="nav nav-list">
-	    <% @menu.dishes.each do |dish| %>
-	      <li><%= dish.title %></li>
-	    <% end %>
-	  </ul>
-	</div>
-
-	<div class="add-dish well">
-	  <h3>Add dish</h3>
-	  <br/>
-	  <%= semantic_form_for :dish, :url => table_dashboard_menu_dish_create_path do |f| %>
-	    <%= f.inputs :title, :description, :position %>
-	    
-	    <%= f.buttons do %>
-	      <%= f.commit_button t('menu_dashboard.edit.add_dish') %>
-	    <% end %>
-
-	  <% end %>
-	  
-	  
-	</div>
       
-      
+      <%= render :partial => 'dish_dashboard/dish_list' %>
     </div>
 
   </div>
