--- a/app/views/dish_dashboard/_dish_list.html.erb
+++ b/app/views/dish_dashboard/_dish_list.html.erb
@@ -1,12 +1,18 @@
 <% content_for :javascripts do %>
   <%= javascript_include_tag 'calendar/jquery-ui-1.8.11.custom.min.js' %>
+  <script>
+    $().ready(function() {
+    TAH.addDishAjax();
+    
+    });
+  </script>
 <% end %>
 
 <h2>Dishes list</h2>
 
 <div class="well">
   <!-- Warning dish-list must stay arround the list of menus -->
-  <ul class="nav nav-list">
+  <ul class="nav nav-list dish-append">
     <% @menu.dishes.each do |dish| %>
       <li><%= dish.title %></li>
     <% end %>
@@ -16,7 +22,7 @@
 <div class="add-dish well">
   <h3>Add dish</h3>
   <br/>
-  <%= semantic_form_for :dish, :url => table_dashboard_menu_dish_create_path do |f| %>
+  <%= semantic_form_for :dish, :html => {:id => 'add-dish-ajax'}, :remote => true, :url => table_dashboard_menu_dish_create_path do |f| %>
     <%= f.input :title, :as => :autocomplete, :url => misc_autocomplete_dish_sample_title_path %>
     <%= f.inputs :description, :position %>
     
@@ -25,6 +31,4 @@
     <% end %>
 
   <% end %>
-  
-  
 </div>
