--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,25 +4,24 @@
 <div class="hero-unit">
   <h1>Welcome to the TAH project</h1>
   <br/>
-  <p><a class="btn btn-primary btn-large" href="<%= new_user_registration_path %>">Register »</a></p>
+  <% if !user_signed_in? %>
+    <p><a class="btn btn-primary btn-large" href="<%= new_user_registration_path %>">Register »</a></p>
+  <% end %>
 </div>
 
 <!-- Example row of columns -->
 <div class="row">
-  <div class="span4">
-    <h2>Heading</h2>
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-    <p><a class="btn" href="#">View details »</a></p>
+  <div class="span8">
+    <h2>Table listing</h2>
+    <ul>
+      <% @tables.each do |table| %>
+	<li>
+	  <%= link_to table.title, table_view_show_path(table) %>
+	</li>
+      <% end %>
   </div>
   <div class="span4">
-    <h2>Heading</h2>
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-    <p><a class="btn" href="#">View details »</a></p>
-  </div>
-  <div class="span4">
-    <h2>Heading</h2>
-    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-    <p><a class="btn" href="#">View details »</a></p>
+    <h2>Sidebar</h2>
   </div>
 </div>
 
