--- a/app/views/layouts/parts/_javascript.html.erb
+++ b/app/views/layouts/parts/_javascript.html.erb
@@ -16,6 +16,10 @@
   calendar : {
   }
   }
+
+  window.images = {
+  spinner : '<%= image_tag 'spinner.gif' %>'
+  }
 </script>
 
 <% if Rails.env.production? -%>
