--- a/app/views/menu_dashboard/edit.html.erb
+++ b/app/views/menu_dashboard/edit.html.erb
@@ -22,7 +22,8 @@
   <div class="row">
 
     <div class="span4">
-      <%= render :partial => 'menu_dashboard/edit', :locals => { :menu => @menu } %>
+      <h2>Edit menu</h2>
+      <%= render :partial => 'menu_dashboard/form', :locals => { :menu => @menu } %>
     </div>
     
     <div class="span6">      
