--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,7 +1,7 @@
 *{margin: 0; padding: 0;}
 
 html{font: normal 12px/18px Helvetica, Arial, sans-serif;}
-body{background: #ebebeb; text-align: center;}
+body{background: white; text-align: center;}
 
 li{list-style: none; display: block;}
 
