--- a/app/views/menu_dashboard/index.html.erb
+++ b/app/views/menu_dashboard/index.html.erb
@@ -30,25 +30,17 @@
       <div class="well">
 	<ul class="nav nav-list">
 	  <% @menus.each_with_index do |menu, index| %>
-	    <%# keep the notice flash message %>
-	    <% if index == @menus.size - 1 and flash[:notice].presence %>
-	      <li class="alert alert-failure">
-	      <% else %>
-	      <li>
-	    <% end %>
-	    <%= link_to menu.title, table_dashboard_menu_edit_path(@table, menu) %>
-	    <%= link_to 'Delete', table_dashboard_menu_delete_path(@table, menu), :method => 'delete', :style => 'color :red;', :confirm => "#{t('menu_dashboard.index.delete_menu')} : #{menu.title} ?" %>
-</li>
-<% end %>
-</ul>
-</div>
+	    <li>
+	      <%= link_to menu.title, table_dashboard_menu_edit_path(@table, menu) %>
+	      <%= link_to 'Delete', table_dashboard_menu_destroy_path(@table, menu), :method => 'delete', :style => 'color :red;', :confirm => "#{t('menu_dashboard.index.delete_menu')} : #{menu.title} ?" %>
+	    </li>
+	  <% end %>
+	</ul>
+      </div>
 
-<a class="btn" href="<%= table_dashboard_menu_create_new_path %>">
-  <i class="icon-plus"></i> 
-  <%= t 'menu_dashboard.index.create_new_menu' %>
-</a>
+      <%= link_to t('menu_dashboard.index.create_new_menu'), table_dashboard_menu_create_path, :method => :post, :class => 'btn' %>
 
-</div>
+    </div>
 
-</div>
+  </div>
 </section>
