--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -8,9 +8,7 @@
     left : 1%;
     top : 1%;
     width :400px;
-    height : 400px;
-    
-    
+    height : 400px;    
 }
 
 .menu-right {
@@ -45,5 +43,33 @@ img.image-triggerable {
     &:hover {
 	opacity : 0.7;
 	cursor : pointer;
+    }
+}
+
+.each-dish {
+    @include rounded(5px); 
+    height : 18px;
+    border : 1px solid black;
+    margin-top : 6px;
+    padding : 4px 6px;
+    @include transition(0.3s);
+    &:hover {
+	opacity : 0.5;
+	cursor : pointer;
+    }
+    #title-dish {
+	float : left;
+    }
+    #image-dish {
+	float : right;
+    }
+}
+
+.formtastic {
+    li.error {
+	border : 1px solid red;
+    }
+    .inline-errors {
+	color :red;
     }
 }
