Max table Max menus + debug system

--- a/app/views/menu_dashboard/edit.html.erb
+++ b/app/views/menu_dashboard/edit.html.erb
@@ -10,11 +10,8 @@
     <li>
       <a href="<%= table_dashboard_manage_path %>">Table : <%= @table.title %></a> <span class="divider">/</span>
     </li>
-    <li>
-      <%= link_to "Menus : #{@menu.title}", table_dashboard_menu_index_path %> <span class="divider">/</span>
-    </li>
     <li class="active">
-      Plat
+      Menu : <%= @menu.title %>
     </li>
   </ul>
 
