ajout feature gmap

--- a/app/views/layouts/parts/_javascript.html.erb
+++ b/app/views/layouts/parts/_javascript.html.erb
@@ -8,6 +8,10 @@
   create : '<%= table_dashboard_availability_create_path %>',
   update : '<%= table_dashboard_availability_update_path %>',
   del : '<%= table_dashboard_availability_delete_path %>'
+  },
+  map : {
+  create : '<%= table_dashboard_address_create_path %>',
+  update : '<%= table_dashboard_address_update_path %>'
   }
 
   }
