--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -73,3 +73,22 @@ img.image-triggerable {
 	color :red;
     }
 }
+
+
+#google_map {
+    border : 1px solid black;
+    padding : 10px 5px 0px 5px;
+    margin-bottom : 5px;
+    @include rounded(5px);
+    #info-message {
+	.success {
+	    color : green;
+	}
+	.failure {
+	    color : red;
+	}
+    }
+    .submit {
+	display : none;
+    }
+}
