--- a/app/views/table_dashboard/edit_table.html.erb
+++ b/app/views/table_dashboard/edit_table.html.erb
@@ -3,6 +3,9 @@
   <script>
     $().ready(function() {
     TAH.clickTriggerUpload($('#trigger_upload_field'), $('#table_main_image'));
+    TAH.editTable();
+    
+    
     });
   </script>
 <% end %>
@@ -19,13 +22,13 @@
 
   <div class="row">
 
-    <div class="span4">
-      &nbsp;
-    </div>
     
     <div class="span6">
-      <%= semantic_form_for @table, :url => table_dashboard_update_table_path do |f| %>
 
+      
+      <h2><%= t('table_dashboard.edit_table.general') %></h2>
+
+	<%= semantic_form_for @table, :url => table_dashboard_update_table_path do |f| %>
 
 	<%# Image click handling %>
 	<%= f.input :main_image, :input_html => { :style => 'opacity : 0; position : absolute;'}  %>
@@ -38,13 +41,24 @@
       
 
       <%= f.inputs :title, :description %>
+
       
       <%= f.buttons do %>
 	<%= f.commit_button %>
       <% end %>
+
+
 <% end %>
 
+
 </div>
+
+    <div class="span6">
+      <h2><%= t('table_dashboard.edit_table.locatisation') %></h2>
+
+      <%= render :partial => 'localisation_gmap', :locals => { :address => @address } %>
+    </div>
+
 
 </div>
 </section>
