--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -76,7 +76,7 @@ img.image-triggerable {
 
 
 #google_map {
-    border : 1px solid black;
+    border : 4px solid #999;
     padding : 10px 5px 0px 5px;
     margin-bottom : 5px;
     @include rounded(5px);
