--- a/app/views/table_dashboard/_localisation_gmap.html.erb
+++ b/app/views/table_dashboard/_localisation_gmap.html.erb
@@ -19,7 +19,13 @@
 
 <%= semantic_form_for :address, :url => table_dashboard_address_create_path do |f| %>
   <div id="info-message"></div>
-  <%= f.inputs :address1, :city, :zipcode, :country %>
+
+  <h3><%= t 'table_dashboard.map.address' %></h3>
+  <%= f.input :address1, :placeholder => '42 place Rodin' %>
+  <%= f.input :city, :placeholder => 'Paris' %>
+  <%= f.input :zipcode, :placeholder => '75016' %>
+  <%= f.input :country, :placeholder => 'France' %>
+
   
   <%= f.input :longitude, :as => :hidden %>
   <%= f.input :latitude, :as => :hidden %>
@@ -27,11 +33,20 @@
   
 
   <%= f.buttons do %>
-    <input value="search" id="search_map" type="submit">
-    <input class="submit" name="commit" type="submit" value="Submit Address" style="display: inline-block; ">
+    <input value="<%= t('table_dashboard.map.launch_search') %>" id="search_map" type="submit">
+    <input value="<%= t('table_dashboard.map.submit_address') %>" class="submit" name="commit" type="button" style="display: inline-block; ">
   <% end %>
+  
+  <div id="map_canvas" style="width:442px; height:300px;"></div>
+  
+  <!-- <br/> -->
 
+  <!-- <h3><%= t 'table_dashboard.map.additionnal' %> <small>private</small></h3> -->
+  <!-- <%= f.input :code, :placeholder => '67AB5', :required => false %> -->
+  <!-- <%= f.input :floor, :placeholder => '1st floor', :required => false %> -->
+  
+
+<input value="<%= t('table_dashboard.map.submit_address') %>" class="submit" name="commit" type="button" style="display: inline-block; ">
 <% end %>
-<div id="map_canvas" style="width:450px; height:300px;"></div>
 
 </div>
